translations: Add translations for new strings
Signed-off-by: Micke Nordin <kano@sunet.se>

--- a/l10n/en_GB.json
+++ b/l10n/en_GB.json
@@ -1,4 +1,7 @@
 { "translations": {
+	"Providers" : "Providers",
+	"Where are you from?" : "Where are you from?",
+	"Please tell us your Cloud Provider." : "Please tell us your Cloud Provider.",
     "Import contacts" : "Import contacts",
     "Details" : "Details",
     "All contacts" : "All contacts",
